<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".PuzzleActivity">
    <item android:id="@+id/puzzle_settings_reset" android:title="@string/puzzle_settings_reset"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/puzzle_settings_level_1" android:title="@string/puzzle_settings_level_1"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/puzzle_settings_level_2" android:title="@string/puzzle_settings_level_2"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/puzzle_settings_level_3" android:title="@string/puzzle_settings_level_3"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
