<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        >

        <TableRow android:layout_width="wrap_content">

            <Button
                android:id="@+id/buttonInstructions"
                style="@style/ButtonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/odd_square"
                android:text="About" />
        </TableRow>

        <TableRow android:layout_width="wrap_content">

            <Button
                android:id="@+id/button3x3"
                style="@style/ButtonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/odd_square"
                android:text="@string/main_3x3_button_text" />
        </TableRow>

        <TableRow android:layout_width="wrap_content">

            <Button
                android:id="@+id/button4x4"
                style="@style/ButtonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/odd_square"
                android:text="@string/main_4x4_button_text" />
        </TableRow>

        <TableRow android:layout_width="wrap_content">

            <Button
                android:id="@+id/button5x5"
                style="@style/ButtonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/odd_square"
                android:text="@string/main_5x5_button_text" />
        </TableRow>
    </TableLayout>


</RelativeLayout>
